Final integratation of components for producto 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-canciones></app-canciones>
+<app-canciones (cancionSeleccionada)="mostrarDetalles($event)"></app-canciones>
+<app-cancion
+  *ngIf="cancionSeleccionada"
+  [cancion]="cancionSeleccionada"
+></app-cancion>
