--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-canciones (cancionSeleccionada)="mostrarDetalles($event)"></app-canciones>
+<app-canciones
+  (cancionSeleccionada)="mostrarDetalles($event)"
+  (cancion)="reproducir($event)"
+></app-canciones>
+<app-reproductor [cancion]="cancion"></app-reproductor>
 <app-cancion
   *ngIf="cancionSeleccionada"
   [cancion]="cancionSeleccionada"
