--- a/src/app/components/canciones/canciones.component.css
+++ b/src/app/components/canciones/canciones.component.css
@@ -2,6 +2,12 @@
   color: green;
 }
 
-.mat-form-field{
-  width: 35%;
+.mat-form-field {
+  width: 35vw;
+  min-width: 200px;
+  max-width: 500px;
+}
+
+.full-width-table {
+  width: 100%;
 }
