--- a/src/app/components/canciones/canciones.component.html
+++ b/src/app/components/canciones/canciones.component.html
@@ -1,22 +1,25 @@
-<h2>Filtro canciones</h2>
-<mat-form-field>
-  <input
-    matInput
-    type="text"
-    name="filtroCanciones"
-    placeholder="Buscar..."
-    [(ngModel)]="cancionFiltrada"
-    (focus)="muestraHint = !muestraHint"
-    (blur)="muestraHint = !muestraHint"
-  />
-  <mat-hint *ngIf="muestraHint">Introduce al menos 3 carácteres</mat-hint>
-</mat-form-field>
+<!-- Top menu con buscador -->
+<div class="top-bar">
+  <mat-form-field>
+    <span class="material-icons">search</span>
+    <input
+      matInput
+      type="text"
+      name="filtroCanciones"
+      placeholder="Buscar..."
+      [(ngModel)]="cancionFiltrada"
+      (focus)="muestraHint = !muestraHint"
+      (blur)="muestraHint = !muestraHint"
+    />
+    <mat-hint *ngIf="muestraHint">Introduce al menos 3 carácteres</mat-hint>
+  </mat-form-field>
+</div>
 
 <p *ngIf="canciones | filtro: cancionFiltrada">
   {{ (canciones | filtro: cancionFiltrada).length }} canciones
 </p>
 
-<div class="mat-elevation-z8">
+<div class="container-canciones">
   <table
     mat-table
     [dataSource]="dataSource"
