--- a/src/app/components/canciones/canciones.component.html
+++ b/src/app/components/canciones/canciones.component.html
@@ -46,7 +46,12 @@
     <!-- Columna posicion -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-      <td mat-cell *matCellDef="let i = index">{{ i + 1 }}</td>
+      <td mat-cell *matCellDef="let row; let i = index">
+        <span *ngIf="!row.muestraPlay">{{ i + 1 }}</span>
+        <span *ngIf="row.muestraPlay" class="material-icons"
+          >play_circle_filled</span
+        >
+      </td>
     </ng-container>
 
     <!-- Columna Canción -->
@@ -68,7 +73,12 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      (mouseenter)="row.muestraPlay = true"
+      (mouseleave)="row.muestraPlay = false"
+    ></tr>
   </table>
 
   <mat-paginator
