--- a/src/app/components/canciones/canciones.component.html
+++ b/src/app/components/canciones/canciones.component.html
@@ -1,23 +1,22 @@
-<!-- Top menu con buscador -->
 <div class="top-bar">
   <mat-form-field>
-    <span class="material-icons">search</span>
-    <input
-      matInput
-      type="text"
-      name="filtroCanciones"
-      placeholder="Buscar..."
-      [(ngModel)]="cancionFiltrada"
-      (focus)="muestraHint = !muestraHint"
-      (blur)="muestraHint = !muestraHint"
+    <input matInput
+    type="text"
+    name="filtroCanciones"
+    placeholder="Buscar..."
+    [(ngModel)]="cancionFiltrada"
+    (focus)="muestraHint = !muestraHint"
+    (blur)="muestraHint = !muestraHint"
     />
     <mat-hint *ngIf="muestraHint">Introduce al menos 3 carácteres</mat-hint>
   </mat-form-field>
+
+  <p *ngIf="canciones | filtro: cancionFiltrada">
+    {{ (canciones | filtro: cancionFiltrada).length }} canciones
+  </p>
+
 </div>
 
-<p *ngIf="canciones | filtro: cancionFiltrada">
-  {{ (canciones | filtro: cancionFiltrada).length }} canciones
-</p>
 
 <div class="container-canciones">
   <table
@@ -81,12 +80,49 @@
     ></tr>
   </table>
 
-  <mat-paginator
-    #paginator
-    [length]="dataSource?.data.length"
-    [pageIndex]="0"
-    [pageSize]="50"
-    [pageSizeOptions]="[25, 50, 100, 250]"
-  >
+    <mat-paginator
+      #paginator
+      [length]="dataSource?.data.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [pageSizeOptions]="[10, 20, 30]"
+    >
   </mat-paginator>
 </div>
+
+<app-reproductor [cancion]="cancion"></app-reproductor>
+
+
+    <!--<tr
+        *ngFor="
+          let cancion of canciones | filtro: cancionFiltrada;
+          let i = index;
+          first as isFirst
+        "
+        (mouseover)="cancion.showPlayOpt = true"
+        (mouseleave)="cancion.showPlayOpt = false"
+        (dblclick)="eliminaEstadoPlay()"
+        (dblclick)="cancion.reproduciendo = true"
+        (dblclick)="reproducir(cancion)"
+        [ngClass]="cancion.reproduciendo ? 'play' : 'queue'"
+      >
+        <th scope="row">
+          <span *ngIf="!cancion.showPlayOpt && !cancion.reproduciendo">{{
+            i + 1
+          }}</span>
+          <span *ngIf="cancion.showPlayOpt || cancion.reproduciendo">></span>
+        </th>
+        <td>
+          {{ cancion.name }}
+          <span
+            class="badge badge-secondary ml-2"
+            *ngIf="cancion.contentAdvisoryRating"
+            >E</span
+          >
+        </td>
+        <td>{{ cancion.artistName }}</td>
+        <td>
+          {{ cancion.duration | date: "mm:ss" }}
+        </td>
+        <td (click)="mostrarDetalles(cancion)" style="cursor: pointer;">+</td>
+      </tr>-->
