--- a/src/app/components/canciones/canciones.component.css
+++ b/src/app/components/canciones/canciones.component.css
@@ -1,7 +1,34 @@
-.play {
-  color: green;
+.play .mat-cell {
+  color: #6be684 !important;
 }
 
-.mat-form-field{
-  width: 35%;
+.queue .play-icon {
+  color: #6be684;
+}
+
+table th:first-child,
+.mat-cell:first-child {
+  width: 50px;
+  text-align: center;
+}
+
+.mat-form-field {
+  width: 35vw;
+  min-width: 200px;
+  max-width: 500px;
+}
+
+.full-width-table {
+  width: 100%;
+  border-top: solid 1px rgba(0, 0, 0, 0.12);
+}
+.top-bar {
+  width: 100%;
+  height: 70px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+  margin: 0 0 50px;
+}
+
+table tr {
+  cursor: pointer;
 }
