--- a/src/app/components/canciones/canciones.component.html
+++ b/src/app/components/canciones/canciones.component.html
@@ -113,8 +113,8 @@
     #paginator
     [length]="dataSource.data.length"
     [pageIndex]="0"
-    [pageSize]="5"
-    [pageSizeOptions]="[5, 10, 15, 25]"
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 20, 30]"
   >
   </mat-paginator>
 </div>
