--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 html,
 body {
@@ -6,5 +7,17 @@ body {
 }
 body {
   margin: 0px;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Quicksand", "Helvetica Neue", sans-serif;
+}
+
+table,
+th,
+td {
+  font-family: "Quicksand", "Helvetica Neue", sans-serif;
+}
+
+.mat-accent .mat-slider-track-fill,
+.mat-accent .mat-slider-thumb,
+.mat-accent .mat-slider-thumb-label {
+  background-color: #6be684;
 }
