--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,7 @@
   </div>
 
   <div class="sidebar">
-    <app-cancion
-      *ngIf="cancionSeleccionada"
-      [cancion]="cancionSeleccionada"
-    ></app-cancion>
+    <app-cancion [cancion]="cancionSeleccionada"></app-cancion>
   </div>
 
   <div class="player-container">
