--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -1,4 +1,4 @@
-<mat-card class="details-card mat-elevation-z0">
+<mat-card *ngIf="cancion" class="details-card mat-elevation-z0">
   <mat-card-header>
     <mat-card-title>{{ cancion.name }}</mat-card-title>
   </mat-card-header>
