--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -1,4 +1,9 @@
-<mat-card *ngIf="cancion" class="details-card mat-elevation-z0">
+<mat-card
+  *ngIf="!cancion" class="details-card-empty mat-elevation-z0"
+>
+</mat-card>
+
+<mat-card *ngIf="cancion && edit" class="details-card mat-elevation-z0">
   <mat-card-header>
     <mat-card-title>{{ cancion.name }}</mat-card-title>
   </mat-card-header>
@@ -19,4 +24,29 @@
     </mat-chip-list>
     <p>{{ cancion.copyright }}</p>
   </mat-card-content>
+  <button (click)="edit=!edit">volver</button>
+</mat-card>
+
+<mat-card *ngIf="cancion && !edit" class="details-card mat-elevation-z0">
+  <mat-card-header>
+    <mat-card-title>{{ cancion.name }}</mat-card-title>
+  </mat-card-header>
+  <img
+    mat-card-image
+    src="{{ cancion.artworkUrl }}"
+    alt="Portada del álbum {{ cancion.collectionName }}"
+  />
+  <mat-card-content>
+    <h3>{{ cancion.collectionName }}</h3>
+    <p>{{ cancion.artistName }}</p>
+    <p>{{ cancion.releaseDate | date: "yyyy" }}</p>
+    <p>{{ cancion.duration | date: "mm:ss" }}</p>
+    <mat-chip-list>
+      <mat-chip *ngFor="let genre of cancion.genres; last as isLast">
+        {{ genre.name }}
+      </mat-chip>
+    </mat-chip-list>
+    <p>{{ cancion.copyright }}</p>
+  </mat-card-content>
+  <button (click)="edit=!edit">editar</button>
 </mat-card>
